<resources>
    <string name="app_name">Daily Diary</string>
    <string name="entry_label">Make a new entry</string>
    <string name="list_label">View previous entries</string>
    <string name="settings_label">Settings</string>
    <string name="rating_label">Rate your day out of 10 (10 being the best)</string>
    <string name="keyword_label">A keyword to describe your day</string>
    <string name="keyword_hint">e.g. Happy</string>
    <string name="contents_label">Contents</string>
    <string name="contents_hint">This is where you put information about your day. Try
    to be as descriptive and detailed as possible. Include things like times and where you
    were.</string>
    <string name="submit_label">Submit</string>
    <string-array name="rating_array">
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
</resources>
